added index.html images

--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-hello
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Web Development</title>
+</head>
+
+<body>
+    <h1>I am not a Software Engineer</h1>
+    <div style="background-image: url('https://www.jaipu5978.github.io\image_piyuu.png');"> </div>
+    
+</body>
+</html>
