Added HTML for Navigation

--- a/index.html
+++ b/index.html
@@ -6,10 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Development</title>
 </head>
-
 <body>
-    <h1>I am not a Software Engineer</h1>
-    <div style="background-image: url('https://www.jaipu5978.github.io\image_piyuu.png');"> </div>
+    <nav>
+        <div>
+                <!-- container for logo link -->
+                <a href=""> <img src="images/logo.png" alt=""> </a>
+
+        </div>
+        <div>
+            <!-- container for navigation link -->
+            <a href="section-home">Home</a>
+                <a href="section-projects">Projects</a>
+                    <a href="section=contact">Contact</a>
+        </div>
+    </nav>
     
 </body>
 </html>
