--- a/index.html
+++ b/index.html
@@ -1,19 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head >
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Development</title>
+    <style>
+        nav{
+            display: flex; 
+            justify-content: space-between;
+            align-items: center;
+            border: 3px solid black;
+        } 
+    
+        div.links a {
+            padding: 10px;
+            text-decoration: none;
+            color: blueviolet;
+            font-weight: bold;
+            border: 4px solid blueviolet;
+        }
+    </style>
 </head>
 <body>
-    <nav>
+    <nav class="links">
         <div>
                 <!-- container for logo link -->
                 <a href=""> <img src="images/logo.png" alt=""> </a>
 
         </div>
-        <div>
+        <div class="links">
             <!-- container for navigation link -->
             <a href="section-home">Home</a>
                 <a href="section-projects">Projects</a>
