--- a/index.html
+++ b/index.html
@@ -36,6 +36,23 @@
                     <a href="section=contact">Contact</a>
         </div>
     </nav>
+
+    <section id="section-home">
+
+        <div>
+                <!-- about me -->
+                <h1>
+                     Hey! I'm Alex, a software developer with 2 years of experience
+                </h1>
+                <p>
+                        I care a lot about crafting quaqlity software that brings delighhtful experience to the customers.
+                </p>
+        </div>
+
+        <div>
+            <img src="images/Screenshot 2021-02-19 170759.png"/>
+        </div>
+    </section>
     
 </body>
 </html>
